@@ -1,3 +1,7 @@
+drkns 23.11.2016 02:44:51 +0200 - build 4850
+
+1. Некорректно отображался hex-просмотр.
+
 drkns 22.11.2016 03:33:12 +0200 - build 4849
 
 1. Продолжим начатое в 4848:
